Tabellen und Abbildungs Beschriftungen

--- a/content/0_Einleitung.tex
+++ b/content/0_Einleitung.tex
@@ -20,13 +20,13 @@ Psychische, physische und soziale Störungen stehen im Zusammenhang mit Stress \
 
 % ---------------------------------------
 \subsubsection{Forschungslücke und Ziel der Studie}
-Aufgrund der geringen Datenlage und der fehlenden Studien im Bereich Medienverhalten und Säuglinge möchte der Autor dieser Arbeit dazu beitragen, die laufende Diskussion mit empirischen Daten zu versorgen. Beim Lesen der Ratgeberliteratur wurde ein stark emotionaler Meinungsaustausch festgestellt. Das Thema ist medial vertreten und auch im privaten Umfeld nehmen die meisten eine Position für oder gegen den elektronischen Medienkonsum während der Betreuung von Kleinkindern ein. Da die direkte Befragung der Säuglinge im Bezug zum Medienverhalten schwierig sein dürfte, soll das Medienverhalten der Eltern im Beisein ihrer Kinder, im Rahmen einer gelungenen Eltern-Kind-Beziehung, untersucht werden. Die Eltern sollen dabei die zentrale Rolle in dieser Arbeit einnehmen, da sie diejenigen sind, die in der Regel am meisten Zeit mit den Kleinkindern verbringen und in den meisten Fällen den grössten Einfluss auf sie ausüben. Dabei soll das Verhalten der Eltern im Umgang mit Medien näher betrachtet werden und mögliche moderierende Faktoren auf dieses Verhalten sollen untersucht werden. Dieses Verhalten ist in der aktuellen Forschung nahezu unbeachtet und es herrscht ein Mangel an Studien, in denen die Eltern von Säuglingen im Umgang mit Medien im Mittelpunkt stehen. Das Thema scheint jedoch in der breiten Öffentlichkeit aktuell zu sein. 
+Aufgrund der geringen Datenlage und der fehlenden Studien im Bereich Mediennutzung und Säuglinge möchte der Autor dieser Arbeit dazu beitragen, die laufende Diskussion mit empirischen Daten zu versorgen. Beim Lesen der Ratgeberliteratur wurde ein stark emotionaler Meinungsaustausch festgestellt. Das Thema ist medial vertreten und auch im privaten Umfeld nehmen die meisten eine Position für oder gegen den elektronischen Medienkonsum während der Betreuung von Kleinkindern ein. Da die direkte Befragung der Säuglinge im Bezug zur Mediennutzung schwierig sein dürfte, soll die Mediennutzung der Eltern im Beisein ihrer Kinder, im Rahmen einer gelungenen Eltern-Kind-Beziehung, untersucht werden. Die Eltern sollen dabei die zentrale Rolle in dieser Arbeit einnehmen, da sie diejenigen sind, die in der Regel am meisten Zeit mit den Kleinkindern verbringen und in den meisten Fällen den grössten Einfluss auf sie ausüben. Dabei soll das Verhalten der Eltern im Umgang mit Medien näher betrachtet werden und mögliche moderierende Faktoren auf dieses Verhalten sollen untersucht werden. Dieses Verhalten ist in der aktuellen Forschung nahezu unbeachtet und es herrscht ein Mangel an Studien, in denen die Eltern von Säuglingen im Umgang mit Medien im Mittelpunkt stehen. Das Thema scheint jedoch in der breiten Öffentlichkeit aktuell zu sein. 
 
-Das Ziel dieser Arbeit ist es, das Medienverhalten der Eltern während der Betreuung ihrer Säuglinge zu untersuchen. Dabei soll aus theoretischer Sicht die Interaktion  zwischen den Eltern und dem Kind näher betrachtet werden, um daraus mögliche, bereits erforschte Auswirkungen auf das Medienverhalten zu übertragen (siehe \textit{Abbildung \ref{fig:InfografikElternKindBeziehung}: \nameref{fig:InfografikElternKindBeziehung}} auf Seite \pageref{fig:InfografikElternKindBeziehung}). 
+Das Ziel dieser Arbeit ist es, die Mediennutzung der Eltern während der Betreuung ihrer Säuglinge zu untersuchen. Dabei soll aus theoretischer Sicht die Interaktion  zwischen den Eltern und dem Kind näher betrachtet werden, um daraus mögliche, bereits erforschte Auswirkungen auf die Mediennutzung zu übertragen (siehe \textit{Abbildung \ref{fig:InfografikElternKindBeziehung}: \nameref{fig:InfografikElternKindBeziehung}} auf Seite \pageref{fig:InfografikElternKindBeziehung}). 
 
-Im Zusammenhang mit dem Medienverhalten der Eltern taucht das Konzept der Bindung auf \cite{Prekop2017, Weber2017, Blikk2017}. Die Bindung der Eltern soll im Bezug zur Eltern-Kind-Beziehung einen Einfluss auf das Verhalten der Eltern haben. Leider fehlen hier wissenschaftlich fundierte Analysen. Diese Arbeit möchte diese Lücke schliessen und untersuchen, ob Bindung tatsächlich als moderierende Variable im Bezug zum Medienverhalten der Eltern betrachtet werden kann und wenn ja, in welchem Ausmass. Zudem kann der Faktor Stress ungünstige Folgen für das Umfeld der Eltern und das Erziehungsverhalten haben \cite{Cina2009}. Da Bindung und Stress gemäss \citeA{Dumas1989} und \citeA{Webster-Stratton1988} Auswirkungen auf das Erziehungsverhalten der Eltern haben, soll der subjektiv erlebte Stress als weiterer möglicher Faktor in die Untersuchung einfliessen.  
+Im Zusammenhang mit der Mediennutzung der Eltern taucht das Konzept der Bindung auf \cite{Prekop2017, Weber2017, Blikk2017}. Die Bindung der Eltern soll im Bezug zur Eltern-Kind-Beziehung einen Einfluss auf das Verhalten der Eltern haben. Leider fehlen hier wissenschaftlich fundierte Analysen. Diese Arbeit möchte diese Lücke schliessen und untersuchen, ob Bindung tatsächlich als moderierende Variable im Bezug zur Mediennutzung der Eltern betrachtet werden kann und wenn ja, in welchem Ausmass. Zudem kann der Faktor Stress ungünstige Folgen für das Umfeld der Eltern und das Erziehungsverhalten haben \cite{Cina2009}. Da Bindung und Stress gemäss \citeA{Dumas1989} und \citeA{Webster-Stratton1988} Auswirkungen auf das Erziehungsverhalten der Eltern haben, soll der subjektiv erlebte Stress als weiterer möglicher Faktor in die Untersuchung einfliessen.  
 
-Diese Studie soll über die Erfassung des Medienverhaltens der Eltern weitere Informationen und Erkenntnisse für die Eltern-Kind-Interaktion im Medienzeitalter generieren und wissenschaftliche Daten für die weitere Diskussion bereitstellen.
+Diese Studie soll über die Erfassung der Mediennutzung der Eltern weitere Informationen und Erkenntnisse für die Eltern-Kind-Interaktion im Medienzeitalter generieren und wissenschaftliche Daten für die weitere Diskussion bereitstellen.
 
 
 
