--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -2,7 +2,7 @@
 \subsection{Versuchssituation}\label{sec:Versuchssituation}
 Die Erstellung dieser Masterarbeit erfolgte im Frühlingssemester 2018 im Rahmen des Studiengangs Angewandte Psychologie in der Vertiefungsrichtung Klinische Psychologie an der Zürcher Hochschule für Angewandte Wissenschaften (ZHAW) im. Die Wahl des Themas und die Erstellung der Disposition erfolgte im Herbstsemester 2017. Darin wurde anhand aktueller theoretischer Ansätze und der bisherigen Forschung, das Vorgehen und das Design vordefiniert und zusammen mit dem betreuenden Dozenten abgesprochen (siehe auch Kapitel \textit{\nameref{sec:Hintergrund}}). 
 
-In einem ersten Schritt erfolgte die Erstellung eines standardisierten Fragebogens. Dieser basierte auf der theoretischen Vorarbeit und beinhaltete die für die Beantwortung der Fragestellung notwendigen Konstrukte \textit{Bindung}, \textit{Stress}, \textit{Medienverhalten}, \textit{subjektives Wohlbefinden} sowie die Erfassung soziodemografischer Daten. Für die Erstellung des Fragebogens wurden soweit als möglich normierte und validierte Instrumente oder Teile existierender Umfragen verwendet. Die Umfrage erfolgte elektronisch via Internet und setzte sich aus einer kurzen Erläuterung der Studie, sowie entsprechenden Anweisungen zur Beantwortung der Fragen zusammen. 
+In einem ersten Schritt erfolgte die Erstellung eines standardisierten Fragebogens. Dieser basierte auf der theoretischen Vorarbeit und beinhaltete die für die Beantwortung der Fragestellung notwendigen Konstrukte \textit{Bindung}, \textit{Stress}, \textit{Mediennutzung}, \textit{subjektives Wohlbefinden} sowie die Erfassung soziodemografischer Daten. Für die Erstellung des Fragebogens wurden soweit als möglich normierte und validierte Instrumente oder Teile existierender Umfragen verwendet. Die Umfrage erfolgte elektronisch via Internet und setzte sich aus einer kurzen Erläuterung der Studie, sowie entsprechenden Anweisungen zur Beantwortung der Fragen zusammen. 
 
 Der Fragebogen wurde mittels der von der ZHAW zur Verfügung gestellten Umfragesoftware \textit{Enterprise Feedback Suite} der Firma \citeA{Questback2018} erstellt. Die grafische Umsetzung entsprach den von der Software vorgegebenen Fragebogentypen und deren Antwortoptionen (ein Auszug des Fragebogens ist in angepasster Form im Anhang \ref{app:Fragebogen} zu finden). Der Aufbau der Umfrage gliederte sich grob in eine kurze Einführungssektion, gefolgt von der Erfassung der demografischen Daten und dem Hauptteil, der die einzelnen Konstrukte erfasst, und dem Ende der Umfrage. In die Einführung wurde die Anonymitätserklärung eingebunden, ein Hinweis auf die mögliche Teilnahme an einem  Wettbewerb gemacht und über die Option für Psychologiestudierende der ZHAW informiert, sich Versuchspersonenstunden anrechnen zu lassen. Anschliessend erfolgte die Erfassung der demografischen Daten. Im Hauptteil wurden die einzelnen Konstrukte erhoben, beginnend mit dem Mediennutzungs\-fragebogen, gefolgt vom Bindungsfragebogen, dem Stressfragebogen und dem Fragebogen für die Einschätzung des subjektiven Wohlbefindens. Am Ende der Befragung konnten sich die Teilnehmenden für die Teilnahme am Wettbewerb oder dem Erhalt von Versuchs\-personenstunden entscheiden. Versuchs\-personenstunden konnten sich nur Studierende der ZHAW in Psychologie anrechnen lassen. Ebenso am Schluss wurden die Teilnehmenden gebeten, die Seriosität ihrer Antworten anzugeben (Umfrage seriös beantwortet oder nicht). 
 
@@ -27,7 +27,7 @@ Im Folgenden werden die Stichprobenumfangsplanung erläutert und die einzelnen f
 Es wurde eine Stichprobengrösse von 210 Personen angestrebt. Diese Stichprobengrösse wurde mittels G*Power \cite{Faul2009} für eine einfaktorielle Varianzanalyse gemäss \citeA{Rasch2014} ermittelt (F-Test - ANOVA: Fixed effects, omnibus, one-way).
 Für die Stichprobenumfangsplanung wird ein mittlerer Effekt \cite{Cohen1988a} als inhaltlich relevant festgelegt: $f = 0.25$ resp. $\Omega^2 = 0.06$. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Es werden zwei Gruppen für den Faktor Bindung benötigt (sicher und unsicher).
 
-Für die Beantwortung des Zusammenhangs zwischen Medienverhalten und subjektivem Wohlbefinden wurde eine lineare Regressionsanalyse durchgeführt. Das Kriterium bildet das subjektive Wohlbefinden und der Prädiktor das Medienverhalten. Die Stichprobengrösse für die Beantwortung dieser Fragestellung wurde wieder mittels G*Power für eine Korrelation zweiseitig berechnet, da ein ungerichteter Zusammenhang angenommen wird. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $r=.3$ erwartet. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Gemäss diesen Vorgaben wurde eine Stichprobengrösse von 138 Probanden angestrebt.
+Für die Beantwortung des Zusammenhangs zwischen Mediennutzung und subjektivem Wohlbefinden wurde eine lineare Regressionsanalyse durchgeführt. Das Kriterium bildet das subjektive Wohlbefinden und der Prädiktor die Mediennutzung. Die Stichprobengrösse für die Beantwortung dieser Fragestellung wurde wieder mittels G*Power für eine Korrelation zweiseitig berechnet, da ein ungerichteter Zusammenhang angenommen wird. Gemäss der Einteilung von \citeA{Cohen1988a} wird ein mittlerer Effekt von $r=.3$ erwartet. Das Signifikanzniveau beträgt $\alpha=0.05$. Die Teststärke soll mindesten $1-\beta=0.95$ betragen. Gemäss diesen Vorgaben wurde eine Stichprobengrösse von 138 Probanden angestrebt.
 
 
 \subsubsection{Operationalisiserung} \label{sec:Operationalisierung}
@@ -86,7 +86,7 @@ Für eine bessere Interpretier- und Lesbarkeit können die oben beschriebenen Sk
     AAS_{Trans}=\frac{AAS_{OrigSkala - 1}}{4}*100
 \end{equation}
 
-Dem Mittelwert der zu transformierenden Formel, die einen Skalenrange von 1 bis 5 hat, wird durch Subtraktion von 1 eine lineare Transformation zu einem Wertebereich 1 bis 4 vorgenommen. Mittels Division durch 4 und anschliessender Multiplikation mit 100 wird eine weitere lineare Transformation zu einem Wertebereich von 0 bis 100 vorgenommen.
+Für die Transformation der einzelnen Skalen (Skalenrange von 1 bis 5) wird deren Mittelwert verwendet und durch eine Subtraktion von 1 eine lineare Transformation vorgenommen (neuer Skalenrange 0 bis 4). Mittels Division durch 4 und anschliessender Multiplikation mit 100 wird eine weitere lineare Transformation zu einem Wertebereich von 0 bis 100 vorgenommen.
 
 Wie bereits oben beschrieben, lassen sich gemäss \citeA{Schmidt2004} mit dem deutschen Instrument die Bindungsstile nicht direkt zuordnen, sondern in zugrunde liegende Dimensionen (Cluster) einteilen \cite{Schuetzmann2004}. Anhand der Ausprägungen der Probanden in den drei Skalen lassen sich drei Cluster definieren: Im Cluster \textit{sicher} sind Probanden mit hohen Werten bei den Skalen Nähe und Vertrauen und niedrigen Werte bei der Skala Angst. Das Cluster \textit{ängstlich} beinhaltet Probanden mit hohen Werten bei der Skala Angst und mittleren Werte bei den Skalen Nähe und Vertrauen. Im dritten Cluster \textit{vermeidend} befinden sich Probanden, die auf allen drei Skalen Nähe, Vertrauen und Angst tiefe Werte aufweisen.
 
@@ -115,7 +115,7 @@ Für die Einteilung in hohe und tiefe Werte der Skala Nähe wird erst der Trennw
 Für die Erfassung der aktuellen subjektiv erlebten Belastung wurde der \textit{Perceived Stress Questionnaire (\acrshort{psq})} von \citeA{Levenstein1993} in der deutschen Übersetzung von \citeA{Fliege2001} verwendet.
 \citeA{Levenstein1993} kreierten für den anglo-amerikanischen und italienischen Sprachraum ein Instrument, mit dem das Ausmass der subjektiv wahrgenommenen und erlebten aktuellen Belastung erfasst werden soll - also das Ausmass aktuell wahrgenommener Belastungsfaktoren und das Erleben der eigenen Belastetheit auf der kognitiven und emotionalen Ebene \cite{Fliege2001}. Der Begriff Belastetheit soll verdeutlichen, dass es sich nicht um die Quelle der Belastung handelt, sondern die Reaktion darauf gemeint ist. Folgende sind die inhaltlichen Kriterien des Fragebogens \cite{Fliege2001}: (1) Stress wird als subjektives Belastungserleben erfasst. Damit ist gemeint, dass sich die Itemformulierung so weit wie möglich an der Perspektive der Wahrnehmung und Bewertung durch die Person orientiert. (2) Belastungsfaktoren und subjektive Belastetheit sollen als übergeordnete Klassen erfasst werden. Dies wird durch ein Vermeiden von person- und situationsspezifischen Formulierungen erreicht (z. B. keine eindeutig berufsbezogenen Items). (3) Es wird lediglich das Belastungserleben und nicht der Umgang mit der Belastung erfragt. Dadurch soll sich der Test von der Erfassung von Bewältigungsbemühungen abgrenzen. Das Belastungserleben wird unabhängig von der Stelle erfasst, an der sich eine Person in einem möglichen Bewältigungsprozess befindet. (4) Es wird die Selbsteinschätzung der Person erhoben und somit nur der bewusste Anteil des Belastungserlebens.
 
-Die Autoren \citeA{Levenstein1993} schlagen vor, das Instrument für Untersuchungen von Zusammenhängen zwischen Stresserleben und Krankheitsentwicklung zu verwenden. Auch wenn in dieser Arbeit weder vom Medienverhalten noch vom subjektiven Wohlbefinden als Krankheit gesprochen werden kann, so sollen die Vorzüge dieses Instruments bezüglich der ökonomischen Durchführbarkeit, der Eignung zur Erfassung möglichst verschiedener Lebenskontexte von Erwachsenen und der Fokussierung auf das gegenwärtige Erleben hervorgehoben werden \cite{Fliege2001}. Bezüglich der empirischen Prüfung und Gütekriterien dieses Testinstruments kann gemäss \citeA{Naescher2009} von einer Auswertungsobjektivität, einer mittleren bis hohen Reliabilität und einer soliden Validierung ausgegangen werden. 
+Die Autoren \citeA{Levenstein1993} schlagen vor, das Instrument für Untersuchungen von Zusammenhängen zwischen Stresserleben und Krankheitsentwicklung zu verwenden. Auch wenn in dieser Arbeit weder von der Mediennutzung noch vom subjektiven Wohlbefinden als Krankheit gesprochen werden kann, so sollen die Vorzüge dieses Instruments bezüglich der ökonomischen Durchführbarkeit, der Eignung zur Erfassung möglichst verschiedener Lebenskontexte von Erwachsenen und der Fokussierung auf das gegenwärtige Erleben hervorgehoben werden \cite{Fliege2001}. Bezüglich der empirischen Prüfung und Gütekriterien dieses Testinstruments kann gemäss \citeA{Naescher2009} von einer Auswertungsobjektivität, einer mittleren bis hohen Reliabilität und einer soliden Validierung ausgegangen werden. 
 Für die Reliabilitätsprüfung wurden sowohl die innere Konsistenz als auch die Split-half-Reliabilität für die unterschiedlichen Stichproben berechnet. Die Ergebnisse befanden sich für alle Skalen im oberen Bereich. Die Werte für Cronbachs $\alpha$ lagen gemäss der Gesamtstichprobe bei $\alpha$ = .86 (Faktor I: Sorgen), .84 (Faktor II: Anspannung), .85 (Faktor III: Freude), .80 (Faktor IV: Anforderungen) und bezogen auf alle vier Skalen bei .85. Bezüglich der Split-half-Reliabilität ergaben sich ähnliche Werte, weswegen von einer mittleren bis hohen Reliabilität ausgegangen werden kann \cite{Fliege2001}.
 
 Der \acrshort{psq} \cite{Fliege2001} ist für alle Erwachsenen und für verschiedene Lebenssituationen geeignet. Die deutsche Stichprobe, auf die sich die Werte beziehen, wurde an Probanden zwischen 17 und 79 Jahren erhoben. Der Fragebogen kann gemäss \citeA{Naescher2009} zur Diagnostik des subjektiven Belastungserlebens bei Erwachsenen zweifellos empfohlen werden.
@@ -182,9 +182,10 @@ Insgesamt schlossen 248 Personen die Umfrage ab. 1454 Personen sind zumindest au
 
 Nach der Datenbereinigung blieben netto 218 Personen übrig (87.9 \%). Einige Personen wurde ausgemustert, da sie beim Jahrgang einen fehlerhaften Wert angegeben hatte (Jg 2017). Zwei weitere Person gaben an, die Umfrage nicht seriös ausgefüllt zu haben. Zwei Personen mussten entfernt werden, da sie bei der Angabe der Mediennutzungszeit in Minuten mit Ja und Nein antworteten. 25 Personen wurden entfernt, da das Alter ihrer Kinder 13 Monate überstieg. 
 
-Die Merkmale \enquote{Geschlecht}, \enquote{Alter in Jahren}, \enquote{Geschlecht Kind} und \enquote{Alter Kind in Monaten} sind in Tabelle \ref{table:Stichprobe} dargestellt (die Merkmale Familieneinkommen, Bildungs\-abschluss, Anzahl Personen im Haushalt, Lebensform und Fremdbetreuung in Tagen sind in Tabelle \ref{table:Gesamtstichprobe} im Anhang zu finden).
-
 \begin{table}[htbp]
+\centering
+\captionsetup{margin=110pt,skip=5pt}
+\caption{Stichprobe}
 \begin{tabular}{m{0.5em}  m{10em}  m{5em}} 
   \hline\hline
   \multicolumn{2}{l}{\textbf{Merkmal}} & \textbf{$n$ (\%)} \\
@@ -209,9 +210,12 @@ Die Merkmale \enquote{Geschlecht}, \enquote{Alter in Jahren}, \enquote{Geschlech
   \hline\hline
   &&\\
 \end{tabular}
-\caption{Stichprobe}
 \label{table:Stichprobe}
 \end{table}
+
+Die Merkmale \enquote{Geschlecht}, \enquote{Alter in Jahren}, \enquote{Geschlecht Kind} und \enquote{Alter Kind in Monaten} sind in Tabelle \ref{table:Stichprobe} dargestellt (die Merkmale Familieneinkommen, Bildungs\-abschluss, Anzahl Personen im Haushalt, Lebensform und Fremdbetreuung in Tagen sind in Tabelle \ref{table:Gesamtstichprobe} im Anhang zu finden).
+
+
 
 Das Alter der Befragten liegt zwischen 20 und 48 Jahren mit einem Durchschnittsalter von 33.9 Jahren ($SD$ = 4.5). Weibliche Personen sind mit 90.8 \% ($n$ = 198) in der Stichprobe vertreten. 44.5 \% der Kinder sind Mädchen ($n$ = 97) und 54.6 \% Knaben ($n$ = 119). Das Alter der Kinder liegt zwischen 0 und 12 Monaten mit einem Durchschnitt von 6.6 Monaten ($SD$ = 3.4).
 
