--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -2,9 +2,9 @@
 \subsection{Beantwortung der Fragestellung} \label{sec:BeantwortungFragestellung}
 Auf die Beantwortung der Fragestellung, ob der Bindungsstil und das aktuelle Stressempfinden der Eltern einen Zusammenhang mit dem im Beisein der Kinder praktizierten Medienverhalten haben und ob dieses Verhalten einen Effekt auf das subjektive Wohlbefinden ausübt, soll in diesem Abschnitt eingegangen werden.
 
-Gemäss den Ergebnissen dieser Untersuchung konnte kein direkter Zusammenhang zwischen dem Bindungsstil der Eltern, unterteilt nach sicher und unsicher gebunden, auf das Medienverhalten der Eltern im Beisein ihrer Kinder festgestellt werden. Es konnte auch dann kein Zusammenhang festgestellt werden, wenn die Mediennutzung danach unterteilt wurde, ob das Kind während der Betreuung wach war oder geschlafen hat. Zudem scheint der Faktor Stress in keinem zusätzlichen Zusammenhang mit der Mediennutzung zu stehen. Aus den vorliegenden Daten kann demzufolge Bindung und Stress in keinen Zusammenhang mit der totalen Mediennutzung der Eltern während der Betreuung ihrer Kinder gebracht werden.
+Gemäss den Ergebnissen dieser Untersuchung konnte kein direkter Zusammenhang zwischen dem Bindungsstil der Eltern, unterteilt nach sicher und unsicher gebunden, auf die Mediennutzung der Eltern im Beisein ihrer Kinder festgestellt werden. Es konnte auch dann kein Zusammenhang festgestellt werden, wenn die Mediennutzung danach unterteilt wurde, ob das Kind während der Betreuung wach war oder geschlafen hat. Zudem scheint der Faktor Stress in keinem zusätzlichen Zusammenhang mit der Mediennutzung zu stehen. Aus den vorliegenden Daten kann demzufolge Bindung und Stress in keinen Zusammenhang mit der totalen Mediennutzung der Eltern während der Betreuung ihrer Kinder gebracht werden.
 
-Des Weiteren konnte kein Zusammenhang zwischen dem Medienverhalten der Eltern und dem subjektiv erlebten Wohlbefinden der Eltern gefunden werden. Daraus lässt sich schliessen, dass Medienverhalten und Wohlbefinden in der vorliegenden Stichprobe keinen Zusammenhang bilden.
+Des Weiteren konnte kein Zusammenhang zwischen der Mediennutzung der Eltern und dem subjektiv erlebten Wohlbefinden der Eltern gefunden werden. Daraus lässt sich schliessen, dass Mediennutzung und Wohlbefinden in der vorliegenden Stichprobe keinen Zusammenhang bilden.
 
 Die Fragestellung setzte sich aus den vier Hypothesen und der Grundhypothese zusammen. Gemäss den Ergebnissen mussten alle vier Hypothesen abgelehnt werden und es gelten die Alternativhypothesen. Daraus folgend musste die Grundhypothese ebenfalls abgelehnt werden, da sich diese aus den vier Hypothesen zusammensetzt. Gemäss Hypothese $H1$ geht ein sicherer Bindungsstil, verglichen mit einem unsicheren Bindungsstil, nicht mit einer geringeren Mediennutzung der Eltern einher. Bei Hypothese $H2$ ist Stress kein Prädiktor für eine erhöhte Mediennutzung während der Betreuung der Kinder. Eine erhöhte Mediennutzung während der Betreuung geht auch nicht mit einem geringeren subjektiven Wohlbefinden einher (Hypothese $H3$). Schliesslich schlagen sich ein sicherer Bindungsstil und ein tiefes Stressempfinden nicht in der geringeren Mediennutzung nieder (Hypothese $H4$).
 
@@ -12,7 +12,7 @@ Aus diesen Ergebnissen lässt sich ableiten, dass die Bindung der Eltern währen
 
 % ---------------------------------------
 \subsection{Interpretation} \label{sec:Interpretation}
-Steht nun die Bindung in einem Zusammenhang mit der Mediennutzung der Eltern und wird diese Nutzung nicht auch vom Stress moderiert? Lässt sich zudem ein Zusammenhang zwischen dem Medienverhalten der Eltern und dem subjektiven Wohlbefinden der Eltern finden? Das vorliegende Kapitel soll auf einzelne Aspekte näher eingehen und dies zu beantworten versuchen.
+Steht nun die Bindung in einem Zusammenhang mit der Mediennutzung der Eltern und wird diese Nutzung nicht auch vom Stress moderiert? Lässt sich zudem ein Zusammenhang zwischen der Mediennutzung der Eltern und dem subjektiven Wohlbefinden der Eltern finden? Das vorliegende Kapitel soll auf einzelne Aspekte näher eingehen und dies zu beantworten versuchen.
 
 % Stichprobe
 \subsubsection{Die Stichprobe ist weiblich und gut gebildet}
@@ -83,7 +83,7 @@ Für die Erfassung des subjektiven aktuellen Belastungserlebens der Eltern wurde
 
 % ---------------------------------------
 \subsection{Ausblick und persönliche Überlegungen} \label{sec:Ausblick}
-Gemäss den Hypothesentests konnte kein Zusammenhang zwischen der Bindung, dem erlebten Stress der Eltern und der Medientätigkeit während der Betreuung gefunden werden. Die Medientätigkeit, so wie sie in dieser Studie erfasst wurde, scheint zu breit erfasst worden zu sein. Die Effekte sind, wenn sie vorhanden sind, viel subtiler vorhanden, als dass sie sich über die Gesamtmediennutzung abbilden lassen würden. Zudem scheint die Bindung nicht mit allen Medientätigkeiten im Zusammenhang zu stehen - in dieser Studie nur mit dem Schreiben von Textnachrichten. Kritisch zu hinterfragen ist hier sehr wohl, ob die Bindung der Eltern durch den eingesetzten Fragebogen (\acrshort{aas}) exakt erfasst wurde und ob dies generell mit einem Fragebogen überhaupt möglich ist. In der Psychologie sind Abgrenzungen nicht immer klar zu ziehen. Ebenso zeigen die gefundenen Effekte weder eine Richtung des Zusammenhangs zwischen der Bindung und dem Medienverhalten noch einen Einfluss auf die Entwicklungsaufgaben in der Eltern-Kind-Interaktion. Für künftige Forschung wäre es interessant, diese Interaktion im Zusammenhang mit Medien und Bindung näher zu untersuchen. Zudem ist unklar, wie das vermehrte Schreiben von Textnachrichten in Beziehung zu einem unsicheren Bindungsstil steht. Tendieren unsicher Gebundene dazu, sich vermehrt aus der Beziehung zu ihrem Kind zu nehmen indem sie sich mittels Smartphone distanzieren, oder könnte das Smartphone sogar eine Veränderung des Bindungsstils begünstigen? Dass der Bindungsstil sich über die Lebenszeit verändern kann, haben \citeA{Lewis2000} in einer Langzeitstudie untersucht. Dieser Punkt kann durch diese Arbeit nicht beantwortet werden. Vielmehr liefert diese Arbeit eine Anzahl von Indizien, welchen weiter nachgegangen werden könnte.
+Gemäss den Hypothesentests konnte kein Zusammenhang zwischen der Bindung, dem erlebten Stress der Eltern und der Medientätigkeit während der Betreuung gefunden werden. Die Medientätigkeit, so wie sie in dieser Studie erfasst wurde, scheint zu breit erfasst worden zu sein. Die Effekte sind, wenn sie vorhanden sind, viel subtiler vorhanden, als dass sie sich über die Gesamtmediennutzung abbilden lassen würden. Zudem scheint die Bindung nicht mit allen Medientätigkeiten im Zusammenhang zu stehen - in dieser Studie nur mit dem Schreiben von Textnachrichten. Kritisch zu hinterfragen ist hier sehr wohl, ob die Bindung der Eltern durch den eingesetzten Fragebogen (\acrshort{aas}) exakt erfasst wurde und ob dies generell mit einem Fragebogen überhaupt möglich ist. In der Psychologie sind Abgrenzungen nicht immer klar zu ziehen. Ebenso zeigen die gefundenen Effekte weder eine Richtung des Zusammenhangs zwischen der Bindung und der Mediennutzung noch einen Einfluss auf die Entwicklungsaufgaben in der Eltern-Kind-Interaktion. Für künftige Forschung wäre es interessant, diese Interaktion im Zusammenhang mit Medien und Bindung näher zu untersuchen. Zudem ist unklar, wie das vermehrte Schreiben von Textnachrichten in Beziehung zu einem unsicheren Bindungsstil steht. Tendieren unsicher Gebundene dazu, sich vermehrt aus der Beziehung zu ihrem Kind zu nehmen indem sie sich mittels Smartphone distanzieren, oder könnte das Smartphone sogar eine Veränderung des Bindungsstils begünstigen? Dass der Bindungsstil sich über die Lebenszeit verändern kann, haben \citeA{Lewis2000} in einer Langzeitstudie untersucht. Dieser Punkt kann durch diese Arbeit nicht beantwortet werden. Vielmehr liefert diese Arbeit eine Anzahl von Indizien, welchen weiter nachgegangen werden könnte.
 
 Weiter wäre zu untersuchen, in welchem Verhältnis die Bindung der Eltern über die Mediennutzung zur Bindung der Kinder steht. Die Medien als \enquote{Übertragungsmittel} der Bindung zum Kind betrachten. Dabei wäre zu untersuchen, ob gewisse Medien in einem Zusammenhang zwischen der Bindung der Eltern und der sich entwickelnden Bindung des Kindes stehen und in welcher Form diese Medien den Bindungsstil und das Bindungsverhalten tangieren. Aus dieser Arbeit lässt sich ein kleiner Zusammenhang zwischen dem Bindungsstil der Eltern auf deren Smartphonegebrauch während der Betreuung herleiten. Zudem scheint es einen Zusammenhang zwischen dem Smartphonegebrauch der Eltern während der Betreuung und dem Bindungsstil der Kinder gemäss \citeA{Dietziker2018} zu geben. Basierend darauf lassen sich nur Vermutungen anstellen. Der Bindungsstil der Eltern könnte sich über die Verwendung gewisser Medien zum Kind übertragen. Es liegt jedoch an fortführenden Untersuchungen, dies zu untersuchen und das Smartphone oder generell Medien als Übertragungsinstrumente der Bindung zu betrachten. Die Bindung scheint gemäss diesen kürzlich gemachten Untersuchungen eine Rolle im Umgang mit dem Smartphone zu spielen.
 
