--- a/content/Anhang/Hypo1_Boxplot.tex
+++ b/content/Anhang/Hypo1_Boxplot.tex
@@ -2,6 +2,7 @@
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Boxplot_TotalMedien_SicherUnsicherGebunden.jpg}
+  \captionsetup{margin=80pt}
   \caption{Boxplot Diagramm Mediennutzung unsicher vs. sicher Gebundene}
   \label{fig:AppBoxplotDiagrammSicherUnsicherGebunden}
 \end{figure}
