--- a/content/Anhang/Hypo1_Histogramm.tex
+++ b/content/Anhang/Hypo1_Histogramm.tex
@@ -3,12 +3,14 @@
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Histogramm_TotalMedien_SicherGebunden.jpg}
+  \captionsetup{margin=80pt}
   \caption{Histogramm Mediennutzung sicher Gebundene}
   \label{fig:AppHistogrammSicherGebunden}
 \end{figure}
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Histogramm_TotalMedien_UnsicherGebunden.jpg}
+  \captionsetup{margin=80pt}
   \caption{Histogramm Mediennutzung unsicher Gebundene}
   \label{fig:AppHistogrammUnsicherGebunden}
 \end{figure}
