--- a/content/Anhang/Hypo2_Kurvenanpassung.tex
+++ b/content/Anhang/Hypo2_Kurvenanpassung.tex
@@ -1,6 +1,7 @@
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Streudiagramm_Hypo2_Kurvenanpassung.jpg}
+  \captionsetup{margin=80pt}
   \caption{Streudiagramm Kurvenanpassung}
   \label{fig:AppHypo2StreudiagrammKurvenanpassung}
 \end{figure}
