--- a/content/Anhang/Hypo2_Streudiagramm.tex
+++ b/content/Anhang/Hypo2_Streudiagramm.tex
@@ -3,6 +3,7 @@
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Streudiagramm_TotalMedien_PSQ.jpg}
+  \captionsetup{margin=80pt}
   \caption{Streudiagramm Mediennutzung und Stress (PSQ)}
   \label{fig:AppStreudiagrammMedienPsq}
 \end{figure}
@@ -10,6 +11,7 @@
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Streudiagramm_Hypo2_GeschaetzteWerteUndResiduen.jpg}
+  \captionsetup{margin=80pt}
   \caption{Streudiagramm der Fehlerwerte  der abhängigen Variable Mediennutzung}
   \label{fig:AppStreudiagrammResiduen}
 \end{figure}
