--- a/content/Anhang/Hypo3_Streudiagramme.tex
+++ b/content/Anhang/Hypo3_Streudiagramme.tex
@@ -2,6 +2,7 @@
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Streudiagramm_Hypo3.jpg}
+  \captionsetup{margin=80pt}
   \caption{Streudiagramm Mediennutzung und subjektives Wohlbefinden (SHS)}
   \label{fig:AppHypo3Streudiagramm}
 \end{figure}
@@ -9,6 +10,7 @@
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Streudiagramm_Hypo3_Residuen.jpg}
+  \captionsetup{margin=80pt}
   \caption{Streudiagramm der Fehlerwerte  der abhängigen Variable subjektives Wohlbefinden}
   \label{fig:AppHypo3StreudiagrammResiduen}
 \end{figure}
