--- a/content/Anhang/Mailing.tex
+++ b/content/Anhang/Mailing.tex
@@ -47,6 +47,7 @@ Zusätzlich zum Schreiben wurde dem Mailing ein Flyer angehängt. Dieser wurde a
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.9,angle=90]{content/Grafik/Flyer_Umfrage_v2.pdf}
+  \captionsetup{margin=80pt}
   \caption{Flyer für die Umfrage}
   \label{fig:flyer}
 \end{figure}
