--- a/content/Anhang/MedienGeraete.tex
+++ b/content/Anhang/MedienGeraete.tex
@@ -1,5 +1,5 @@
 \begin{figure}[ht]
-\caption{Anzahl Geräte im Haushalt}\label{fig:AppGeräteHaushalt}
+\centering
 \begin{tikzpicture}[scale=.86]
   \begin{axis}[
     xbar ,
@@ -39,4 +39,6 @@
   \legend{\text{0 Geräte}, \text{1 Gerät}, \text{2 Geräte}, \text{3 Geräte}, \text{mehr als 3 Geräte}}
   \end{axis}
 \end{tikzpicture}
+\captionsetup{margin=80pt}
+\caption{Anzahl Geräte im Haushalt}\label{fig:AppGeräteHaushalt}
 \end{figure}
