--- a/content/Anhang/Mediennutzung.tex
+++ b/content/Anhang/Mediennutzung.tex
@@ -1,5 +1,5 @@
 \begin{figure}[htp]
-\caption{Medien \& Mediennutzung}\label{fig:AppMediennutzung}
+\centering
 \begin{tikzpicture}[scale=0.82, auto]
   \begin{axis}[
     xbar,
@@ -33,4 +33,6 @@
   \legend{nicht benutzt, privat \& geschäftlich, geschäftlich, privat}
   \end{axis}
 \end{tikzpicture}
+\captionsetup{margin=80pt}
+\caption{Medien \& Mediennutzung}\label{fig:AppMediennutzung}
 \end{figure}
