--- a/content/Anhang/Medientaetigkeit.tex
+++ b/content/Anhang/Medientaetigkeit.tex
@@ -1,5 +1,5 @@
 \begin{figure}[htp]
-\caption{Medientätigkeit}\label{fig:AppMedientätigkeit}
+\centering
 \begin{tikzpicture}[scale=0.9]
   \begin{axis}[
     xbar,
@@ -30,4 +30,6 @@
   \legend{\text{$M$ schlafend}, \text{$M$ wach},  \text{$M$ total}}
   \end{axis}
 \end{tikzpicture}
+\captionsetup{margin=80pt}
+\caption{Medientätigkeit}\label{fig:AppMedientätigkeit}
 \end{figure}
