--- a/content/Anhang/Medienverzicht.tex
+++ b/content/Anhang/Medienverzicht.tex
@@ -1,5 +1,5 @@
 \begin{figure}[htp]
-\caption{Medienverzicht}\label{fig:AppMedienverzicht}
+\centering
 \begin{tikzpicture}[scale=1]
   \begin{axis}[
     xbar,
@@ -26,4 +26,6 @@
   \legend{kein Verzicht}
   \end{axis}
 \end{tikzpicture}
+\captionsetup{margin=80pt}
+\caption{Medienverzicht}\label{fig:AppMedienverzicht}
 \end{figure}
