--- a/content/Anhang/PSQ.tex
+++ b/content/Anhang/PSQ.tex
@@ -1,5 +1,9 @@
 
 \begin{table}[htbp]
+\centering
+\captionsetup{margin=5pt,skip=5pt}
+\caption{Items des Perceived Stress Questionnaire}
+\label{table:PSQ}
 \begin{tabular}{|p{2em} | m{30em} | l|} 
   \hline
   \multicolumn{3}{|c|}{\textbf{Perceived Stress Questionnaire**}}\\
@@ -42,8 +46,5 @@
   \multicolumn{3}{l}{* Bei diesen Items muss der Wert des Items von 5 abgezogen werden,}\\
   \multicolumn{3}{l}{~~~bevor das Ergebnis mit den Werten der anderen Items in die Berechnung eingeht.}\\
   \multicolumn{3}{l}{** Deutsche Übersetzung gemäss \citeA{Fliege2001}}.\\
-  \multicolumn{3}{l}{}\\
 \end{tabular}
-\caption{Items des Perceived Stress Questionnaire}
-\label{table:PSQ}
 \end{table}
