--- a/content/Anhang/SHS.tex
+++ b/content/Anhang/SHS.tex
@@ -1,4 +1,8 @@
 \begin{table}[htbp]
+\centering
+\captionsetup{margin=5pt,skip=5pt}
+\caption{Items der Subjective Happiness Scale}
+\label{table:SHS}
 \begin{tabular}{|p{1em} | p{4em} p{4em} p{4em} p{4em} p{4em} p{4em} p{4em}|} 
   \hline
   \multicolumn{8}{|c|}{\textbf{Subjective Happiness Scale*}}\\
@@ -32,6 +36,4 @@
   
   \multicolumn{3}{l}{}\\
 \end{tabular}
-\caption{Items der Subjective Happiness Scale}
-\label{table:SHS}
 \end{table}
