--- a/content/Anhang/TabellenAAS.tex
+++ b/content/Anhang/TabellenAAS.tex
@@ -2,6 +2,10 @@ Die folgende Tabellen stellt die Skalenwerte der Adult Attachement Scale (AAS) d
 
 %Table
 \begin{table}[ht]
+\centering
+\captionsetup{margin=80pt,skip=5pt}
+\caption{Skalenwerte der Adult Attachment Scale - AAS}
+\label{table:AppAASDeskriptiv}
 \begin{tabular}{m{6em} m{3em}  m{3em}  m{5em} m{3em}} 
   \hline
   & $M$ & $SD$ & Min - Max & Schiefe\\
@@ -11,8 +15,5 @@ Die folgende Tabellen stellt die Skalenwerte der Adult Attachement Scale (AAS) d
   $AAS_{Angst}$ & 1.81 & .70 & .80 - 4 & .91 \\
   \hline
   \multicolumn{5}{l}{\textit{Anmerkung.} $N$=217, Skala Wertebereich 1 bis 5}\\
-  &&&&\\
 \end{tabular}
-\caption{Skalenwerte der Adult Attachment Scale - AAS}
-\label{table:AppAASDeskriptiv}
 \end{table}
