--- a/content/Anhang/TabellenPSQ.tex
+++ b/content/Anhang/TabellenPSQ.tex
@@ -1,5 +1,9 @@
 %Table
 \begin{table}[ht]
+\centering
+\captionsetup{margin=80pt,skip=5pt}
+\caption{Skalenwerte des Perceived Stress Questionnaire - PSQ}
+\label{table:AppPSQDeskriptiv}
 \begin{tabular}{m{6em} m{3em}  m{3em}  m{5em} m{3em}} 
   \hline
   & $M$ & $SD$ & Min - Max & Schiefe\\
@@ -11,8 +15,5 @@
   $PSQ_{Gesamtscore}$ & 37.03 & 17.11 & 3.33 - 91.67 & .42\\
   \hline
   \multicolumn{5}{l}{\textit{Anmerkung.} $N$=218, Skala Wertebereich 0 bis 100}\\
-  &&&&\\
 \end{tabular}
-\caption{Skalenwerte des Perceived Stress Questionnaire - PSQ}
-\label{table:AppPSQDeskriptiv}
 \end{table}
