--- a/content/3_ergebnisse.tex
+++ b/content/3_ergebnisse.tex
@@ -2,13 +2,12 @@
 Die erhobenen Daten wurden mittels SPSS Version 25 für Mac OS X aufbereitet. Die Stichprobendaten wurden direkt aus der \acrfull{efs} \cite{Questback2018} mittels Datenexport für SPSS exportiert. Allfällige Fehlerquellen wurden bei der Datenbereinigung korrigiert. Dies wurde durch \acrshort{efs} erleichtert, indem nur abgeschlossene Datensätze exportiert wurden und eine erste Werteprüfung bereits bei der Eingabe erfolgte (z. B. wurden nur Zahlen bei der Eingabe des Jahrgangs zugelassen). Fehlende Eingaben durch die Teilnehmenden wurden durch vordefinierte Werte von \acrshort{efs} gesetzt. Dadurch wurden diese \enquote{Missing-Values} innerhalb von SPSS als solche berücksichtigt und flossen als fehlende Datenwerte in die Berechnungen ein. Für die Berechnung der \enquote{Mediennutzung}, der \enquote{Bindung}, des \enquote{Stressniveaus} und des \enquote{subjektiven Wohlbefindens} wurden zusätzliche Variablen in SPSS erstellt und basierend auf Skalenwerten der Teilnehmenden berechnet (für die Formel der Berechnung siehe Sektion \textit{\nameref{sec:Design}}).
 
 \subsubsection{Medien und Mediennutzung}
-Im Rahmen der Umfrage wurde die Mediennutzung während der Betreuung der Kinder erhoben. Dabei wurde zwischen \enquote{privat genutzt}, \enquote{geschäftlich genutzt}, \enquote{privat \& geschäftlich genutzt} und \enquote{nicht genutzt} unterschieden. Zur Übersichtlichkeit wurde in Abbildung \ref{fig:Mediennutzung}, S. \pageref{fig:Mediennutzung} die Ausprägung auf \textit{genutzt} und \textit{nicht genutzt} zusammengefasst, wobei die geschäftliche und die private Nutzung zusammengefasst wurde (für eine detaillierte Darstellung siehe Anhang \ref{app:Mediennutzung}, Abbildung \ref{fig:AppMediennutzung}).
+Im Rahmen der Umfrage wurde die Mediennutzung während der Betreuung der Kinder erhoben. Dabei wurde zwischen \enquote{privat genutzt}, \enquote{geschäftlich genutzt}, \enquote{privat \& geschäftlich genutzt} und \enquote{nicht genutzt} unterschieden. Zur Übersichtlichkeit wurde in Abbildung \ref{fig:Mediennutzung} die Ausprägung auf \enquote{genutzt} und \enquote{nicht genutzt} zusammengefasst, wobei die geschäftliche und die private Nutzung zusammengefasst wurde (für eine detaillierte Darstellung siehe Anhang \ref{app:Mediennutzung}, Abbildung \ref{fig:AppMediennutzung}).
 
 % Figure
 \begin{figure}[hbt]
-\caption{Medien \& Mediennutzung}\label{fig:Mediennutzung}
 \centering
-\begin{tikzpicture}[scale=1, auto,swap]
+\begin{tikzpicture}[scale=.8, auto,swap]
   \begin{axis}[
     xbar stacked,
     %y axis line style = { opacity = 0 },
@@ -39,34 +38,37 @@ Im Rahmen der Umfrage wurde die Mediennutzung während der Betreuung der Kinder 
   
   \end{axis}
 \end{tikzpicture}
+\captionsetup{margin={100pt,20pt}}
+\caption{Medien \& Mediennutzung}\label{fig:Mediennutzung}
 \end{figure}
 
 97.2 \% der Befragten gaben an, das Smartphone während der Betreuung ihrer Kinder zu nutzen, wobei dies zu 72 \% privat, 1.4 \% geschäftlich und zu 23.9 \% privat \& geschäftlich erfolgte. 2.8 \% benutzten das Smartphone während der Betreuung nicht. 31.7 \% gaben an, den Fernseher während der Betreuung ihrer Kinder privat zu nutzen und 68.3 \% gaben an, den Fernseher nicht zu nutzen. Den Computer (Laptop- oder Desktopcomputer) nutzten 42.4 \% während Betreuungszeiten, unterteilt in 17.4 \% privat, 6.4 \% geschäftlich und 18.3 \% privat \& geschäftlich. 57.8 \% nutzten keinen Computer während der Betreuung. Das Tablet nutzten 19.7 \% während der Betreuung (17 \% privat, 0 \% geschäftlich und 2.8 \% privat \& geschäftlich). 80.3 \% nutzten das Tablet während dieser Zeit nicht. Den Radio (Stereoanlage, CD Player) nutzten 62.8 \% während der Betreuung ihrer Kinder hauptsächlich privat (57.3 \% privat, 1.4 \% geschäftlich, 4.1\% privat \& geschäftlich). 37.2 \% nutzten das Radio nicht. Printmedien (Buch, Zeitung, Heft, Comic) wurden von 68.8 \% der Eltern während der Zeit mit ihren Kindern genutzt (58.7 \% privat, 1.8 \% geschäftlich und 8.3 \% privat \& geschäftlich) und von 31.2 \% nicht genutzt. Foto- oder Videokamera nutzten 55 \%, wobei der Hauptanteil von 51.8 \% im privaten Rahmen stattfand (0 \% geschäftlich und 3.2 \% privat \& geschäftlich). Die Spielekonsole wurde währen der Betreuung von 4.1 \% privat genutzt, gegenüber 95.9 \%, die sie nicht nutzte. Der MP3-Player wurde von 8.3 \% genutzt, unterteilt in 7.3 \% private, 0 \% geschäftliche und 0.9 \% private \& geschäftliche Nutzung. 91.7 \% nutzten den MP3-Player nicht während der Betreuung.
 
-Weiter wurde die Medientätigkeit in Minuten anhand der letzten Betreuung des Kindes erfasst (siehe Tabelle \ref{table:Medientätigkeit}, S. \pageref{table:Medientätigkeit}). Dabei wurde unterschieden, ob das Kind wach war $MNS_{Wach}$ oder geschlafen hat $MNS_{\text{\textit{Schlafend}}}$. Alle Medientätigkeiten summiert ergaben den Mittelwert der Mediennutzung. Dieser belief sich während das Kind wach war auf $M$ = 93.1 Minuten ($SD$ = 103.6, $Min$ = 0, $Max$ = 613) und $M$ = 108.6 Minuten, während das Kind geschlafen hat ($SD$ = 105.3, $Min$ = 0, $Max$ = 495). Total waren die Teilnehmer im Schnitt $M$ = 202.1 Minuten mit Medien beschäftigt, während sie ihr Kind betreuten ($SD$ = 174.9, $Min$ = 3, $Max$ = 840).
+Weiter wurde die Medientätigkeit in Minuten anhand der letzten Betreuung des Kindes erfasst (siehe Tabelle \ref{table:Medientätigkeit}). Dabei wurde unterschieden, ob das Kind wach war $MNS_{Wach}$ oder geschlafen hat $MNS_{\text{\textit{Schlafend}}}$. Alle Medientätigkeiten summiert ergaben den Mittelwert der Mediennutzung. Dieser belief sich während das Kind wach war auf $M$ = 93.1 Minuten ($SD$ = 103.6, $Min$ = 0, $Max$ = 613) und $M$ = 108.6 Minuten, während das Kind geschlafen hat ($SD$ = 105.3, $Min$ = 0, $Max$ = 495). Total waren die Teilnehmer im Schnitt $M$ = 202.1 Minuten mit Medien beschäftigt, während sie ihr Kind betreuten ($SD$ = 174.9, $Min$ = 3, $Max$ = 840).
 
 %Table
-\begin{table}[b]
+\begin{table}[hb]
+\centering
+\captionsetup{margin=50pt, skip=5pt}
+\caption{Medientätigkeit während der Betreuung}
 \begin{tabular}{m{8em} m{4em}  m{4em}  m{5em} m{4em}} 
   \hline
   & $M$ & $SD$ & Min - Max & Schiefe\\
   \hline
   $MNS_{Wach}$* & 93.08 & 103.61 & 0 - 613 & 2.26\\
-  $MNS_{Schlafend}$** & 108.63 & 105.32 & 0 - 495 & 1.56\\
+  $MNS_{\text{\textit{Schlafend}}}$** & 108.63 & 105.32 & 0 - 495 & 1.56\\
   $MNS_{Total}$*** & 202.10 & 174.86 & 3 - 840 & 1.44 \\
   \hline
   \multicolumn{5}{l}{\textit{Anmerkung. *$N$ = 208, **$N$ = 205, ***$N$ = 204, Angaben in Minuten.}}\\
   &&&&\\
 \end{tabular}
-\caption{Medientätigkeit während der Betreuung}
 \label{table:Medientätigkeit}
 \end{table}
 
 Auf die einzelnen Medien verteilt bedeutet das, dass die Probanden im Schnitt $M_{w}$ = 5.2 Minuten telefonierten, während dem das Kind wach war und $M_{s}$ = 7.2 Minuten, während es geschlafen hat (siehe dazu Abbildung \ref{fig:Medientätigkeit}). Im Schnitt haben die Teilnehmer $M_{w}$ = 10 Minuten mit Textnachrichten verbracht (Lesen und Schreiben) während das Kind wach war und $M_{s}$ = 13.8 Minuten während das Kind geschlafen hat. Für das Bearbeiten und Lesen von E-Mails setzten die Teilnehmenden $M_{w}$ = 1.7 Minuten (Kind war wach) und $M_{s}$ = 7 Minuten ein (Kind hat geschlafen). Beim Lesen und Anschauen von Printemedien (Bilder-)Bücher, Magazine, Zeitungen, Comics etc.) setzten die Eltern $M_{w}$ = 5.3 und $M_{s}$ = 12.5 Minuten ein. Im Internet verbrachten sie $M_{w}$ = 5.9 und $M_{s}$ = 19.7 Minuten mit Surfen und Informationen suchen. Musik hörten die Eltern während der Betreuung $M_{w}$ = 18.6 und $M_{s}$ = 8.3 Minuten. Sie schauten im Schnitt $M_{w}$ = 5.4 und $M_{s}$ = 25.1 Minuten Fernsehen oder Videos (TV-Sender, Netflix, DVD etc.). Das Radio lief während $M_{w}$ = 34.3 und $M_{s}$ = 12.9 Minuten. Fotos oder Videos wurden während $M_{w}$ = 5.1 und $M_{s}$ = 0.9 Minuten gemacht. Videogames (Smartphone, Computer, Konsole etc.) wurden während $M_{w}$ = .2 und $M_{s}$ = 1.5 Minuten gespielt. Hörspiele und Hörbücher wurden während $M_{w}$ = 1.5 und $M_{s}$ = 2.1 Minuten gehört. Die komplette Auflistung der Mittelwerte (wach \& schlafend), inklusive Angabe des  Mittelwerts ist in Tabelle \ref{fig:AppMedientätigkeit} im Anhang zu finden.
 
-\begin{figure}%[htp]
-\caption{Mittelwerte der Medientätigkeiten während der Betreuung}\label{fig:Medientätigkeit}
-%\centering
+\begin{figure}[h]
+\centering
 \begin{tikzpicture}[scale=1]
   \begin{axis}[
     xbar stacked,
@@ -82,19 +84,21 @@ Auf die einzelnen Medien verteilt bedeutet das, dass die Probanden im Schnitt $M
     xlabel            = {Mittelwerte $M$ (\textit{Angaben in Minuten})},
     %height            = 20cm,
     width             = 13cm,
-    symbolic y coords = {Hörspiele, VideoGames, Fotos, Radio, TV, Musik, Internet, Lesen, Email, SMS, Telefonieren},
+    symbolic y coords = {Hörspiele, Videogames, Fotos, Radio, TV, Musik, Internet, Lesen, Email, SMS, Telefonieren},
     nodes near coords,
     nodes near coords align={horizontal},
   ]
   %wach
-  \addplot[draw=black,fill=cyan] coordinates { (5.2,Telefonieren)(10,SMS)(1.7,Email)(5.3,Lesen)(5.9,Internet)(18.6,Musik)(5.4,TV)(34.3,Radio)(5.1,Fotos)(.2,VideoGames)(1.5,Hörspiele)};
+  \addplot[draw=black,fill=cyan] coordinates { (5.2,Telefonieren)(10,SMS)(1.7,Email)(5.3,Lesen)(5.9,Internet)(18.6,Musik)(5.4,TV)(34.3,Radio)(5.1,Fotos)(.2,Videogames)(1.5,Hörspiele)};
   
   %schlafend
-  \addplot[draw=black,fill=orange] coordinates { (7.2,Telefonieren)(13.8,SMS)(7,Email)(12.5,Lesen)(19.7,Internet)(8.3,Musik)(25.1,TV)(12.9,Radio)(0.9,Fotos)(1.5,VideoGames)(2.1,Hörspiele)};
+  \addplot[draw=black,fill=orange] coordinates { (7.2,Telefonieren)(13.8,SMS)(7,Email)(12.5,Lesen)(19.7,Internet)(8.3,Musik)(25.1,TV)(12.9,Radio)(0.9,Fotos)(1.5,Videogames)(2.1,Hörspiele)};
   
   \legend{\text{$M$ Kind wach}, \text{$M$ Kind schlafend}}
   \end{axis}
 \end{tikzpicture}
+\captionsetup{margin={100pt,20pt}}
+\caption{Mittelwerte der Medientätigkeiten während der Betreuung}\label{fig:Medientätigkeit}
 \end{figure}
 
 Neben der Mediennutzung und der Medientätigkeit wurde die Anzahl Geräte im Haushalt erfragt (detaillierte Auflistung siehe Tabelle \ref{fig:AppGeräteHaushalt} im Anhang). Dabei gaben 83.9 \% der Befragten an, zwei Smartphones im Haushalt zu besitzen. 70.2 \% gaben an, ein TV-Gerät zu besitzen. 45 \% besitzen zwei Computer (Desktop oder Laptop), 45.9 \% ein Tablet und 48.2 \% ein Radio (Stereoanlage, CD-Player) im Haushalt. 51.4 \% gaben an, keine Tageszeitung oder ein Magazin abonniert zu haben. 45.9 \% gaben an, einen Fotoapparat oder eine Videokamera zu besitzen. 61 \% besitzen keine Spielekonsole und 67 \% keinen MP3-Player.
@@ -105,7 +109,11 @@ Zudem wurden die Medien erhoben, auf welche die Eltern während der Betreuung am
 Die Skalenauswertung der \acrfull{aas} lieferte weitere Werte (siehe Tabelle \ref{table:AASDeskriptivTrans}). Dabei wurden die transformierten Skalen mit einem Wertebereich von 0 bis 100 verwendet (siehe dazu Formel \ref{eq:AASIndexTrans} in Kapitel \textit{\nameref{sec:AAS}}). Der Mittelwert $M$ der Skala $AAS_{\textnormal{Nähe}}$ beträgt 78.46 ($SD$ = 15.98). Der Mittelwert $M$ der Skala $AAS_{Vertrauen}$ beträgt 80.18 ($SD$ = 16.98) und der Mittelwert  $M$ der Skala $AAS_{Angst}$ beträgt 20.28 ($SD$ = 17.43). Die entsprechenden Werte der originalen Skalen sind in Tabelle \ref{table:AppAASDeskriptiv} im Anhang zu finden.
 
 %Table
-\begin{table}%[ht]
+\begin{table}[ht]
+\centering
+\captionsetup{margin=70pt, skip=5pt}
+\caption{Transformierte Skalenwerte der Adult Attachment Scale - AAS}
+\label{table:AASDeskriptivTrans}
 \begin{tabular}{m{7em} m{3em}  m{3em}  m{5em} m{3em}} 
   \hline
   & $M$ & $SD$ & Min - Max & Schiefe\\
@@ -115,19 +123,17 @@ Die Skalenauswertung der \acrfull{aas} lieferte weitere Werte (siehe Tabelle \re
   $AAS_{AngstTrans}$ & 20.28 & 17.43 & -5 - 75 & .91 \\
   \hline
   \multicolumn{5}{l}{\textit{Anmerkung. $N$ = 217, Wertebereich Skala 0 bis 100.}}\\
-  &&&&\\
 \end{tabular}
-\caption{Transformierte Skalenwerte der Adult Attachment Scale - AAS}
-\label{table:AASDeskriptivTrans}
 \end{table}
 
 Für die Beantwortung der Fragestellung wurde anhand der Skalen eine Aufteilung der Stichprobe in \enquote{sicher} und \enquote{unsicher} gebundene Personen vorgenommen. Wie bereits in Kapitel \textit{\nameref{sec:AAS}} beschrieben, kann eine Aufteilung in das Cluster \enquote{sicher} vorgenommen werden \cite{Schuetzmann2004}. Gemäss dieser Aufteilung lassen sich 69.7 \% ($N$ = 144) der Probanden als sicher und 30.3 \% ($N$ = 60) als unsicher gebundene Personen einteilen. 
 
-\subsubsection{Stress anhand \acrshort{psq}}
-Die Skalenauswertung des \acrfull{psq} liefert folgende Werte (siehe Tabelle \ref{table:PSQDeskriptiv}): Der Mittelwert $M$ der Skala $PSQ_{Sorgen}$ beträgt 24.28 ($SD$ = 17.69). Der Mittelwert $M$ der Skala $PSQ_{Anspannung}$ beträgt 42.14 ($SD$ = 21.96). Der Mittelwert $M$ der Skala $PSQ_{Freude}$ beträgt 65.26 ($SD$ = 19.08). Der Mittelwert $M$ der Skala $PSQ_{\text{\textit{Anforderung}}}$ beträgt 46.97 ($SD$ = 19.54) und der Gesamtmittelwert $M$ der Skala $PSQ_{Gesamtscore}$ beträgt 37.03 ($SD$ = 17.11).
-
 %Table
 \begin{table}[ht]
+\centering
+\captionsetup{margin=70pt, skip=5pt}
+\caption{Skalenwerte des Perceived Stress Questionnaire - PSQ}
+\label{table:PSQDeskriptiv}
 \begin{tabular}{m{6em} m{3em}  m{3em}  m{5em} m{3em}} 
   \hline
   & $M$ & $SD$ & Min - Max & Schiefe\\
@@ -139,11 +145,11 @@ Die Skalenauswertung des \acrfull{psq} liefert folgende Werte (siehe Tabelle \re
   $PSQ_{Gesamtscore}$ & 37.03 & 17.11 & 3.33 - 91.67 & .42\\
   \hline
   \multicolumn{5}{l}{\textit{Anmerkung.} $N$=218, Skala Wertebereich 0 bis 100}\\
-  &&&&\\
 \end{tabular}
-\caption{Skalenwerte des Perceived Stress Questionnaire - PSQ}
-\label{table:PSQDeskriptiv}
 \end{table}
+
+\subsubsection{Stress anhand \acrshort{psq}}
+Die Skalenauswertung des \acrfull{psq} liefert folgende Werte (siehe Tabelle \ref{table:PSQDeskriptiv}): Der Mittelwert $M$ der Skala $PSQ_{Sorgen}$ beträgt 24.28 ($SD$ = 17.69). Der Mittelwert $M$ der Skala $PSQ_{Anspannung}$ beträgt 42.14 ($SD$ = 21.96). Der Mittelwert $M$ der Skala $PSQ_{Freude}$ beträgt 65.26 ($SD$ = 19.08). Der Mittelwert $M$ der Skala $PSQ_{\text{\textit{Anforderung}}}$ beträgt 46.97 ($SD$ = 19.54) und der Gesamtmittelwert $M$ der Skala $PSQ_{Gesamtscore}$ beträgt 37.03 ($SD$ = 17.11).
 
 
 \subsubsection{Wohlbefinden anhand \acrshort{shs}}
@@ -151,6 +157,10 @@ Der Indexwert der \acrfull{shs} $SHS~I$ beläuft sich in dieser Stichprobe auf $
 
 %Table
 \begin{table}[ht]
+\centering
+\captionsetup{margin=80pt, skip=5pt}
+\caption{Skalenwerte des Subjective Happiness Scale - SHS}
+\label{table:SHSDeskriptiv}
 \begin{tabular}{m{6em} m{3em}  m{3em}  m{5em} m{3em}} 
   \hline
   & $M$ & $SD$ & Min - Max & Schiefe\\
@@ -158,10 +168,7 @@ Der Indexwert der \acrfull{shs} $SHS~I$ beläuft sich in dieser Stichprobe auf $
   $SHS~I$ & 5.53 & 1.01 & 2.25 - 7.0 & -.77 \\
   \hline
   \multicolumn{5}{l}{\textit{Anmerkung.} $N$ = 218, Skala Wertebereich 1 bis 7}\\
-  &&&&\\
 \end{tabular}
-\caption{Skalenwerte des Subjective Happiness Scale - SHS}
-\label{table:SHSDeskriptiv}
 \end{table}
 
 % ---------------------------------------
