--- a/content/Anhang/AAS.tex
+++ b/content/Anhang/AAS.tex
@@ -3,6 +3,10 @@ Die im Folgenden dargestellte \acrfull{aas} wurde aus der Validierungsstudie von
 
 
 \begin{table}[htbp]
+\centering
+\captionsetup{margin=10pt, skip=5pt}
+\caption{Items der Adult Attachment Scale}
+\label{table:AASItems}
 \begin{tabular}{|l | m{30em} | p{2em}|} 
   \hline
   \multicolumn{3}{|c|}{\textbf{Adult Attachment Scale**}}\\
@@ -37,8 +41,5 @@ Die im Folgenden dargestellte \acrfull{aas} wurde aus der Validierungsstudie von
   \hline
   \multicolumn{3}{l}{* Die Items wurden für die Erstellung des Skalenwertes umcodiert.}\\
   \multicolumn{3}{l}{** Deutsche Übersetzung gemäss \citeA{Schmidt2004}}.\\
-  \multicolumn{3}{l}{}\\
 \end{tabular}
-\caption{Items der Adult Attachment Scale}
-\label{table:AASItems}
 \end{table}
