--- a/content/Anhang/Hypo1_QQDiagramm.tex
+++ b/content/Anhang/Hypo1_QQDiagramm.tex
@@ -2,12 +2,14 @@
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/QQDiagramm_TotalMedien_SicherGebunden.jpg}
+  \captionsetup{margin=80pt}     
   \caption{Q-Q-Diagramm Mediennutzung sicher Gebundene}
   \label{fig:AppQQDiagrammSicherGebunden}
 \end{figure}
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/QQDiagramm_TotalMedien_UnsicherGebunden.jpg}
+  \captionsetup{margin=80pt}
   \caption{Q-Q-Diagramm Mediennutzung unsicher Gebundene}
   \label{fig:AppQQDiagrammUnsicherGebunden}
 \end{figure}
