--- a/content/Anhang/Hypo3_Histogramm.tex
+++ b/content/Anhang/Hypo3_Histogramm.tex
@@ -1,6 +1,7 @@
 \begin{figure}[h]
   \centering
      \includegraphics[scale=0.4]{content/Grafik/Histogramm_Hypo3_Normverteilung.jpg}
+  \captionsetup{margin=80pt}
   \caption{Verteilung der Fehlerwerte}
   \label{fig:AppHypo3HistogrammResiduen}
 \end{figure}
