--- a/content/Anhang/ResultateMedientaetigkeiten.tex
+++ b/content/Anhang/ResultateMedientaetigkeiten.tex
@@ -1,7 +1,10 @@
 %Table
 \begin{table}[ht]
+\centering
+\captionsetup{margin=20pt,skip=5pt}
+\caption{Ergebnisse Bindung vs. Medientätigkeiten}
+\label{table:AppResultateMedientaetigkeiten}
 \begin{tabular}{l l  r }
-
   \multicolumn{3}{l}{\textbf{Hypothese 1:} ANOVA - Bindung zu Medientätigkeit}\\
   \hline
   \multicolumn{2}{l}{\textit{Telefonieren total:}} & ($F$(1,213) = .107, $p$=.744, partielles $\eta^2$=.001, $n$=215)\\
@@ -27,10 +30,5 @@
   \multicolumn{2}{l}{\textit{Video Games total:}} & ($F$(1,215) = 3.177, $p$=.076, partielles $\eta^2$=.015, $n$=217)\\
   &&\\
   \multicolumn{2}{l}{\textit{Hörspiele total:}} & ($F$(1,216) = .021, $p$=.884, partielles $\eta^2$=.000, $n$=218)\\
-  &&\\
-  
-  &&\\
 \end{tabular}
-\caption{Ergebnisse Bindung vs. Medientätigkeiten}
-\label{table:AppResultateMedientaetigkeiten}
 \end{table}
