--- a/content/Anhang/Stichprobe.tex
+++ b/content/Anhang/Stichprobe.tex
@@ -1,6 +1,7 @@
+\begin{center}
 \begin{longtable}[l]{m{0.5em}  m{25em}  m{5em}} 
+  \captionsetup{skip=5pt}
   \caption{Gesamtstichprobe \label{table:Gesamtstichprobe}}\\
-  &&\\
   \hline\hline
   \multicolumn{2}{l}{\textbf{Merkmal}} & \textbf{$n$ (\%)} \\
   \hline
@@ -79,3 +80,4 @@
   &  $M$ (Min./Max.) & 1.0 (0/5)\\
   & $SD$ &  1.3\\
 \end{longtable}
+\end{center}
