--- a/content/Anhang/ZusammenzugResultate.tex
+++ b/content/Anhang/ZusammenzugResultate.tex
@@ -1,5 +1,9 @@
 %Table
 \begin{table}[ht]
+\centering
+\captionsetup{margin=20pt,skip=5pt}
+\caption{Zusammenzug der Hypothesen-Ergebnissen (Aufteilung wach / schlafend)}
+\label{table:AppZusammenzugResultate}
 \begin{tabular}{l l  l }
 
   \multicolumn{3}{l}{\textbf{Hypothese 1:} ANOVA - Bindung zu Mediennutzung}\\
@@ -28,8 +32,5 @@
   & \textit{Medien Total} & ($F$(2,201) = .206, $p$=.814, partielles $\eta^2$=.002, $n$=204)\\
   & \textit{Medien Kind wach} & ($F$(2,205) = .710, $p$=.493, partielles $\eta^2$=.007, $n$=208)\\
   & \textit{Medien Kind schlafend} & ($F$(2,202) = .146, $p$=.864, partielles $\eta^2$=.001, $n$=205)\\
-  &&\\
 \end{tabular}
-\caption{Zusammenzug der Hypothesen-Ergebnissen (Aufteilung wach / schlafend)}
-\label{table:AppZusammenzugResultate}
 \end{table}
