--- a/header.tex
+++ b/header.tex
@@ -13,6 +13,7 @@
 \usepackage{mathptmx} 
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{caption}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{pdfpages}
 \usepackage[]{ragged2e}
